--- a/html/sfe/css/sass/_4-colours.scss
+++ b/html/sfe/css/sass/_4-colours.scss
@@ -1,33 +1,40 @@
 //// Brand
 
-$light: #B088BC;
+$light: #98D7E2;
 
-$mid: #98D7E2; 
+$light-pastel: scale-color($light, $lightness: 30%, $saturation: -20%);
 
-$mid-bright: #8F4F97;
+$mid: #288098; 
 
-$dark: #140431; 
+$mid-bright: #5CC1D4;
 
-$darkest: #222121;
+$dark: #2D3030; 
 
-//// Section-specific colours
 
-$section-alpha: #00855B;
+/// Calls to Action / Highlights
 
-$section-beta: #0456BE;
+$contrast: #D96E10; // WCAG 2 AA Compliant (18pt+)
 
-$section-gamma: #0080A6;
+$contrast-light: #FBA458; // Don't use with white for text
 
-$section-delta: #760B5E;
+$contrast-alt: #6381BF; // WCAG 2 AA Compliant (18pt+)
+
+$contrast-alt-light: #90AEEC; // Don't use with white for text
+
+$feedback: scale-color($contrast-alt, $lightness: 70%);
+
+$error: #ffcdb3;
+
+$disabled: #ccc;
 
 
 //// Text-specific colours
 /////// A11Y: These will validate to WCAG 2.0 
 ///////////// for AA small text (4.5:1)
 
-$link-text: #5F39AC;
+$link-text: $contrast;
 
-$mid-text: $mid;
+$mid-text: #437F8F;
 
 $dark-text: $dark;
 
@@ -38,7 +45,7 @@ $disabled-text: #666;
 
 $white: #ffffff; // Yes, really.
 
-$light-pastel: #D8ADE5;
+
 
 .pattern {
   background: url(../../assets/pattern.png);
@@ -64,28 +71,7 @@ $light-pastel: #D8ADE5;
 }
 
 
-/// Calls to Action / Highlights
-
-$contrast: #D96E10; // WCAG 2 AA Compliant (18pt+)
-
-$contrast-light: #FBA458; // Don't use with white for text
-
-$contrast-alt: #6381BF; // WCAG 2 AA Compliant (18pt+)
-
-$contrast-alt-light: #90AEEC; // Don't use with white for text
-
-$feedback: scale-color($contrast-alt, $lightness: 70%);
-
-$error: #ffcdb3;
-
-$disabled: #ccc;
-
-
 /// Background utility classes
-
-.bg--darkest {
-  background-color: $darkest;
-}
 
 .bg--dark {
   background-color: $dark;
