--- a/html/sfe/css/output/patterns/0-footer.css
+++ b/html/sfe/css/output/patterns/0-footer.css
@@ -16,23 +16,20 @@
 .icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
-.bg--darkest {
-  background-color: #222121; }
-
 .bg--dark {
-  background-color: #140431; }
+  background-color: #2D3030; }
 
 .bg--mid {
-  background-color: #98D7E2; }
+  background-color: #288098; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #98D7E2; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #bcdfe6; }
 
 .footer__top {
-  background-color: #140431;
+  background-color: #2D3030;
   padding: 2em 8% 1.5em 8%; }
 
 .footer__top__report-issues {
@@ -93,7 +90,7 @@
   height: 5.8125em; }
 
 .footer__nav {
-  background-color: #75c9d8;
+  background-color: #237186;
   padding: 1.5em 8% 0.5em 8%;
   text-align: center; }
 
@@ -108,7 +105,7 @@
     border-bottom: 0.1em dotted #ffffff; }
 
 footer {
-  background-color: #140431;
+  background-color: #2D3030;
   padding: 2.4em 8% 3.5em 8%;
   text-align: center; }
 
