--- a/html/sfe/css/output/patterns/02-calls-to-action.css
+++ b/html/sfe/css/output/patterns/02-calls-to-action.css
@@ -15,20 +15,17 @@
 .icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
-.bg--darkest {
-  background-color: #222121; }
-
 .bg--dark {
-  background-color: #140431; }
+  background-color: #2D3030; }
 
 .bg--mid {
-  background-color: #98D7E2; }
+  background-color: #288098; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #98D7E2; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #bcdfe6; }
 
 .cta:before, .cta:after {
   display: table;
@@ -43,8 +40,8 @@
   width: 100%;
   margin: 0 0 1.5em 0;
   padding: 0.8em;
-  background-color: #98D7E2;
-  border-left: 1em solid #140431;
+  background-color: #288098;
+  border-left: 1em solid #2D3030;
   border-bottom: none;
   -webkit-transition: background-color 0.2s ease-in-out;
   -moz-transition: background-color 0.2s ease-in-out;
@@ -52,7 +49,7 @@
   -o-transition: background-color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out; }
   .cta:hover {
-    background-color: #9dd9e3; }
+    background-color: #2b8ba5; }
   .cta:hover span {
     text-decoration: underline; }
 
@@ -82,7 +79,7 @@
     background-color: #6e8ac3; }
 
 .cta.cta--dark {
-  background-color: #140431;
+  background-color: #2D3030;
   border-left: none; }
   .cta.cta--dark:hover {
     border-left: none; }
@@ -94,7 +91,7 @@
     border-left: none; }
 
 .cta.icon-pattern {
-  border-color: #B088BC; }
+  border-color: #98D7E2; }
 
 .cta--no-circle div {
   display: none; }
@@ -112,7 +109,7 @@
   width: auto;
   min-width: 15em;
   border-left: none;
-  background-color: #222121;
+  background-color: #2D3030;
   color: #ffffff; }
   .cta--lockable div {
     float: none;
@@ -130,11 +127,11 @@
     width: 1.375em;
     height: 1.875em; }
   .cta--lockable:hover {
-    background-color: #363535; }
+    background-color: #3f4343; }
 
 @media only all and (min-width: 20em) {
   .cta {
-    border-left: 1.5em solid #140431;
+    border-left: 1.5em solid #2D3030;
     padding: 0.5em 0.8em 0.5em 0.8em; }
   .cta--light {
     border-color: #FBA458; }
