--- a/html/sfe/css/output/patterns/06-pagination.css
+++ b/html/sfe/css/output/patterns/06-pagination.css
@@ -15,20 +15,17 @@
 .icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
-.bg--darkest {
-  background-color: #222121; }
-
 .bg--dark {
-  background-color: #140431; }
+  background-color: #2D3030; }
 
 .bg--mid {
-  background-color: #98D7E2; }
+  background-color: #288098; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #98D7E2; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #bcdfe6; }
 
 /* Pagination */
 ol.pagination {
@@ -54,24 +51,24 @@ ol.pagination li {
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: #98D7E2;
+  background-color: #288098;
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
     background-color: #6381BF; }
 
 .pagination__current a {
-  background-color: #8F4F97;
+  background-color: #5CC1D4;
   color: #ffffff;
   cursor: not-allowed;
   border: none; }
   .pagination__current a:hover {
     text-decoration: underline;
     color: #ffffff;
-    background-color: #8F4F97; }
+    background-color: #5CC1D4; }
 
 .pagination__previous a, .pagination__next a {
-  background-color: #140431;
+  background-color: #2D3030;
   color: #ffffff;
   border-bottom: none;
   padding: 0.35em 0.1em;
