--- a/html/sfe/css/output/patterns/06-subnavigation.css
+++ b/html/sfe/css/output/patterns/06-subnavigation.css
@@ -16,20 +16,17 @@
 .icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
-.bg--darkest {
-  background-color: #222121; }
-
 .bg--dark {
-  background-color: #140431; }
+  background-color: #2D3030; }
 
 .bg--mid {
-  background-color: #98D7E2; }
+  background-color: #288098; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #98D7E2; }
 
 .bg--light-pastel {
-  background-color: #D8ADE5; }
+  background-color: #bcdfe6; }
 
 .subnav {
   margin: 0 0 4em 0; }
@@ -38,7 +35,7 @@
   display: inline-block;
   font-size: 1.1em;
   padding: 0.4em 1em 0.4em 1em;
-  background-color: #98D7E2;
+  background-color: #288098;
   color: #ffffff;
   margin: 0 0 1em 0; }
 
@@ -46,17 +43,17 @@
   list-style-type: none; }
 
 .subnav .subnav__item, .subnav .subnav__item.subnav__item--sub-parent {
-  color: #B088BC; }
+  color: #98D7E2; }
   .subnav .subnav__item:before, .subnav .subnav__item.subnav__item--sub-parent:before {
     content: "— "; }
   .subnav .subnav__item a:hover, .subnav .subnav__item.subnav__item--sub-parent a:hover {
-    color: #140431;
-    border-color: #140431;
+    color: #2D3030;
+    border-color: #2D3030;
     border-bottom: 0.1em solid; }
   .subnav .subnav__item ul li a, .subnav .subnav__item.subnav__item--sub-parent ul li a {
-    color: #9b3fa7; }
+    color: #53c7dd; }
   .subnav .subnav__item ul li a.active, .subnav .subnav__item.subnav__item--sub-parent ul li a.active {
-    color: #140431; }
+    color: #2D3030; }
 
 .subnav .subnav__item.subnav__item--parent {
   margin: 0 0 0.5em 0; }
@@ -64,19 +61,19 @@
     content: ""; }
   .subnav .subnav__item.subnav__item--parent a {
     font-weight: 400;
-    color: #140431;
-    border-color: #140431; }
+    color: #2D3030;
+    border-color: #2D3030; }
     .subnav .subnav__item.subnav__item--parent a:hover {
-      color: #98D7E2;
-      border-color: #98D7E2; }
+      color: #437F8F;
+      border-color: #437F8F; }
 
 .subnav .subnav__item.subnav__item--sub-parent a {
-  color: #140431;
-  border-color: #140431; }
+  color: #2D3030;
+  border-color: #2D3030; }
 
 .subnav .subnav__item a.active {
   border-bottom: none;
-  color: #140431;
+  color: #2D3030;
   cursor: not-allowed; }
 
 /*# sourceMappingURL=06-subnavigation.css.map */
