--- a/html/sfe/css/output/patterns/15-color-specific-styles.css
+++ b/html/sfe/css/output/patterns/15-color-specific-styles.css
@@ -19,13 +19,13 @@
   background-color: #222121; }
 
 .bg--dark {
-  background-color: #140431; }
+  background-color: #2D3030; }
 
 .bg--mid {
-  background-color: #98D7E2; }
+  background-color: #288098; }
 
 .bg--light {
-  background-color: #B088BC; }
+  background-color: #98D7E2; }
 
 .bg--light-pastel {
   background-color: #D8ADE5; }
