--- a/html/sfe/css/sass/_5.1-typography.scss
+++ b/html/sfe/css/sass/_5.1-typography.scss
@@ -63,7 +63,7 @@ em {
 
 a {
   color: $link-text;
-  border-bottom: 0.1em dotted $mid;
+  border-bottom: 0.08em dotted $link-text;
   text-decoration: none;
 }
 
