--- a/html/sfe/css/output/patterns/07-form-fields.css
+++ b/html/sfe/css/output/patterns/07-form-fields.css
@@ -131,7 +131,7 @@ input[type="file"] {
 
 .form-required {
   font-weight: 300;
-  color: #ffcdb3; }
+  color: #FFF3B3; }
 
 .format {
   font-weight: 300;
