--- a/html/sfe/css/output/patterns/09-feedback-error.css
+++ b/html/sfe/css/output/patterns/09-feedback-error.css
@@ -28,7 +28,7 @@
   background-color: #bcdfe6; }
 
 .feedback--error {
-  background-color: #ffcdb3;
-  border-bottom: 0.2em solid #ffbc9a; }
+  background-color: #FFF3B3;
+  border-bottom: 0.2em solid #ffef9a; }
 
 /*# sourceMappingURL=09-feedback-error.css.map */
