--- a/html/sfe/css/output/patterns/08-feedback.css
+++ b/html/sfe/css/output/patterns/08-feedback.css
@@ -28,8 +28,8 @@
   background-color: #bcdfe6; }
 
 .feedback {
-  background-color: #d0d9ec;
-  border-bottom: 0.2em solid #a1b3d8;
+  background-color: #deeff2;
+  border-bottom: 0.2em solid #abd7df;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
